Pull up following revision(s) (requested by rin in ticket #1341): 	sys/arch/powerpc/fpu/fpu_emu.c: revision 1.19 	sys/arch/powerpc/fpu/fpu_explode.c: revision 1.7 - add missing default from FreeBSD - remove duplicate panic pointed out by matt -- PR port-powerpc/51368: powerpc FPU emulation fails for single precision floating point arithmetic For single precision instruction, calculate first in double precision, and then round it. With this fix, single precision arithmetic gets sane on ibm4xx and booke. Taken from FreeBSD commit r258250:    https://svnweb.freebsd.org/base?view=revision&revision=258250 Ok matt and simonb.