sys/arch/powerpc/fpu/fpu_explode.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: fpu_explode.c,v 1.6 2005/12/11 12:18:42 christos Exp $ */
+/*	$NetBSD: fpu_explode.c,v 1.6.140.1 2017/01/03 06:19:21 snj Exp $ */
 
 /*
  * Copyright (c) 1992, 1993
@@ -46,7 +46,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: fpu_explode.c,v 1.6 2005/12/11 12:18:42 christos Exp $");
+__KERNEL_RCSID(0, "$NetBSD: fpu_explode.c,v 1.6.140.1 2017/01/03 06:19:21 snj Exp $");
 
 #include <sys/types.h>
 #include <sys/systm.h>
@@ -235,7 +235,7 @@ fpu_explode(struct fpemu *fe, struct fpn *fp, int type, int reg)
 		s = fpu_dtof(fp, s, space[1]);
 		break;
 
-		panic("fpu_explode");
+	default:
 		panic("fpu_explode: invalid type %d", type);
 	}
 
